--- a/coffee_card/analysis_options.yaml
+++ b/coffee_card/analysis_options.yaml
@@ -22,7 +22,20 @@ linter:
   # producing the lint.
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    prefer_single_quotes: true  # Use single quotes for consistency
+    prefer_const_constructors: true
+    prefer_const_declarations: true
+    prefer_const_literals_to_create_immutables: true
+    always_declare_return_types: true
+    avoid_empty_else: true
+    avoid_relative_lib_imports: true
+    avoid_unnecessary_containers: true
+    directives_ordering: true
+    sort_child_properties_last: true
+    use_key_in_widget_constructors: true
+    package_prefixed_library_names: true
+    avoid_print: true  # Use proper logging instead
+    use_build_context_synchronously: true
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
