--- a/coffee_card/pubspec.yaml
+++ b/coffee_card/pubspec.yaml
@@ -58,7 +58,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/img/coffee_bg.jpg
+    - assets/img/coffee_bean.png
+    - assets/img/sugar_cube.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
